# uni_contest_25

./: README.md  camera_topic_node.py  filter_test.py
src/f1tenth_system/f1tenth_stack/config/: vesc.yaml
src/f1tenth_system/vesc/vesc_ackermann/src/: ackermann_to_vesc.cpp  vesc_to_odom.cpp
src/miru_f1tenth_system/Camera_Drive/camera_basic_pkg/: CMakeLists.txt  package.xml
src/miru_f1tenth_system/Camera_Drive/camera_basic_pkg/include/my_pkg/: lanefollowing.hpp
src/miru_f1tenth_system/Camera_Drive/camera_basic_pkg/src/: grayscale.cpp  lanefollowing.cpp
src/miru_f1tenth_system/LiDAR_Drive/gap_follow/: CMakeLists.txt  package.xml
src/miru_f1tenth_system/LiDAR_Drive/gap_follow/src/: disparity_node.cpp  reactive_node.cpp
src/miru_f1tenth_system/Odom_Drive/odom_msgs/: CMakeLists.txt  package.xml
src/miru_f1tenth_system/Odom_Drive/odom_msgs/msg/: MyOdom.msg
src/miru_f1tenth_system/Odom_Drive/odom_navigation/: CMakeLists.txt  package.xml
src/miru_f1tenth_system/Odom_Drive/odom_navigation/src/: odom_navigation_node.cpp
src/miru_f1tenth_system/Odom_Drive/odom_publisher/: CMakeLists.txt  package.xml
src/miru_f1tenth_system/Odom_Drive/odom_publisher/launch/: odom_launch.xml
src/miru_f1tenth_system/Odom_Drive/odom_publisher/src/: vesc_to_odom_with_ekf.cpp
src/miru_f1tenth_system/launcher_pkg/: CMakeLists.txt  package.xml
src/miru_f1tenth_system/launcher_pkg/launch/: mk_launch.py  test_launch.xml
src/miru_f1tenth_system/launcher_pkg/src/: dg_node_launcher.cpp  hm_node_launcher.cpp  js_node_launcher.cpp  mk_node_launcher.cpp  node_launcher.cpp  sh_node_launcher.cpp
