<?xml version="1.0"?>
<package format="3">
  <name>odom_navigation</name>
  <version>0.0.1</version>
  <description>
    A ROS2 package for navigating to a target coordinate using odometry data.
  </description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 실행 및 빌드에 필요한 의존성 -->
  <depend>rclcpp</depend>
  <depend>vesc_msgs</depend>
  <depend>odom_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
